Creating damage calculation script, creating custom EffectContext to pass over custom booleans(block, crit)

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,6 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=35270ADE453C730BE063F4BFA53D1FBB
+
+[/Script/GameplayAbilities.AbilitySystemGlobals]
++AbilitySystemGlobalsClassName="/Script/UE5_RPG.MPAbilitySystemGlobals"
